RESOLVED FIXED 256272
ASSERTION FAILED: isMainRunLoop() under RemoteRenderingBackend::releaseRemoteGPU()
https://bugs.webkit.org/show_bug.cgi?id=256272
Summary ASSERTION FAILED: isMainRunLoop() under RemoteRenderingBackend::releaseRemote...
Chris Dumez
Reported 2023-05-03 14:44:59 PDT
ASSERTION FAILED: isMainRunLoop() under RemoteRenderingBackend::releaseRemoteGPU(): ASSERTION FAILED: isMainRunLoop() /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/WebKit/GPUProcess/GPUProcess.cpp(178) : void WebKit::GPUProcess::tryExitIfUnusedAndUnderMemoryPressure() 1 0x13720bb44 WTFCrash 2 0x119645010 decltype(auto) std::__1::apply[abi:v15006]<void IPC::callMemberFunction<WebKit::DrawingArea, WebKit::DrawingArea, void (), std::__1::tuple<>>(WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(), std::__1::tuple<>&&)::'lambda'(auto&&...), std::__1::tuple<>>(WebKit::DrawingArea&&, WebKit::DrawingArea&&) 3 0x11a239280 WebKit::GPUProcess::tryExitIfUnusedAndUnderMemoryPressure() 4 0x11a27dec8 WebKit::RemoteRenderingBackend::releaseRemoteGPU(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 5 0x11a1ec088 auto void IPC::callMemberFunction<WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...)::operator()<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>(auto&&...) const 6 0x11a1ebff0 decltype(std::declval<WebKit::RemoteRenderingBackend>()(std::declval<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>())) std::__1::__invoke[abi:v15006]<void IPC::callMemberFunction<WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>(WebKit::RemoteRenderingBackend&&, WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>&&) 7 0x11a1ebfc4 decltype(auto) std::__1::__apply_tuple_impl[abi:v15006]<void IPC::callMemberFunction<WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>, 0ul>(WebKit::RemoteRenderingBackend&&, WebKit::RemoteRenderingBackend&&, std::__1::__tuple_indices<0ul>) 8 0x11a1ebf88 decltype(auto) std::__1::apply[abi:v15006]<void IPC::callMemberFunction<WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend&&, WebKit::RemoteRenderingBackend&&) 9 0x11a1ebc70 void IPC::callMemberFunction<WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&) 10 0x11a1cb674 void IPC::handleMessage<Messages::RemoteRenderingBackend::ReleaseRemoteGPU, WebKit::RemoteRenderingBackend, WebKit::RemoteRenderingBackend, void (WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)>(IPC::Connection&, IPC::Decoder&, WebKit::RemoteRenderingBackend*, void (WebKit::RemoteRenderingBackend::*)(WTF::ObjectIdentifierGeneric<WebKit::WebGPUIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)) 11 0x11a1ca1a4 WebKit::RemoteRenderingBackend::didReceiveStreamMessage(IPC::StreamServerConnection&, IPC::Decoder&) 12 0x11c28c6c0 IPC::StreamServerConnection::dispatchStreamMessage(IPC::Decoder&&, IPC::StreamMessageReceiver&) 13 0x11c28b174 IPC::StreamServerConnection::dispatchStreamMessages(unsigned long) 14 0x11c28ab90 IPC::StreamConnectionWorkQueue::processStreams() 15 0x11c293ecc IPC::StreamConnectionWorkQueue::startProcessingThread()::$_0::operator()() 16 0x11c293e6c WTF::Detail::CallableWrapper<IPC::StreamConnectionWorkQueue::startProcessingThread()::$_0, void>::call() 17 0x13913495c WTF::Function<void ()>::operator()() const 18 0x137307bdc WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 19 0x1373136d8 WTF::wtfThreadEntryPoint(void*)
Attachments
Chris Dumez
Comment 1 2023-05-03 14:47:19 PDT
Chris Dumez
Comment 2 2023-05-03 14:47:31 PDT
Chris Dumez
Comment 4 2023-05-03 14:49:28 PDT
EWS
Comment 5 2023-05-03 15:48:13 PDT
Committed 263655@main (3810b677d2dc): <https://commits.webkit.org/263655@main> Reviewed commits have been landed. Closing PR #13417 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.