ASSERTION FAILED: isMainRunLoop() under RemoteRenderingBackend::releaseRemoteGPU() https://bugs.webkit.org/show_bug.cgi?id=256272

Reviewed by NOBODY (OOPS!).

RemoteRenderingBackend::releaseRemoteGPU() runs off the main thread and was calling
tryExitIfUnusedAndUnderMemoryPressure() on this same thread, which wasn't safe and
would hit an assertion in debug. Make sure we dispatch to the main thread before
calling tryExitIfUnusedAndUnderMemoryPressure().

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::releaseRemoteGPU):